--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
+  - _r-mutex=1.0.1=anacondar_1
   - aioeasywebdav=2.4.0=py38h578d9bd_1001
   - aiohttp=3.7.4.post0=py38h497a2fe_0
   - alsa-lib=1.2.3=h516909a_0
@@ -19,37 +20,40 @@ dependencies:
   - bcftools=1.13=h3a49de5_0
   - bcrypt=3.2.0=py38h497a2fe_1
   - boost-cpp=1.74.0=h312852a_4
-  - boto3=1.17.105=pyhd8ed1ab_0
-  - botocore=1.20.105=pyhd8ed1ab_0
+  - boto3=1.18.48=pyhd8ed1ab_0
+  - botocore=1.21.48=pyhd8ed1ab_0
+  - brotli=1.0.9=h7f98852_5
+  - brotli-bin=1.0.9=h7f98852_5
   - brotlipy=0.7.0=py38h497a2fe_1001
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.1=h7f98852_1
+  - c-ares=1.17.2=h7f98852_0
   - ca-certificates=2021.5.30=ha878542_0
   - cachetools=4.2.2=pyhd8ed1ab_0
   - cairo=1.16.0=h6cf1ce9_1008
   - cairocffi=1.2.0=pyhd8ed1ab_0
   - cairosvg=2.5.2=pyhd8ed1ab_0
   - certifi=2021.5.30=py38h578d9bd_0
-  - cffi=1.14.5=py38ha65f79e_0
+  - cffi=1.14.6=py38h3931269_1
   - chardet=4.0.0=py38h578d9bd_1
+  - charset-normalizer=2.0.0=pyhd8ed1ab_0
   - click=8.0.1=py38h578d9bd_0
   - colorama=0.4.4=pyh9f0ad1d_0
-  - coloredlogs=15.0.1=py38h578d9bd_0
+  - coloredlogs=15.0.1=py38h578d9bd_1
   - colormath=3.0.0=py_2
   - commonmark=0.9.1=py_0
-  - configargparse=1.5.1=pyhd8ed1ab_0
+  - configargparse=1.5.2=pyhd8ed1ab_0
   - cryptography=3.4.7=py38ha5dfef3_0
   - cssselect2=0.2.1=pyh9f0ad1d_1
-  - curl=7.77.0=hea6ffbf_0
+  - curl=7.79.1=hea6ffbf_0
   - cutadapt=3.4=py38h4a8c8d9_1
   - cycler=0.10.0=py_2
   - datrie=0.8.2=py38h497a2fe_2
-  - decorator=5.0.9=pyhd8ed1ab_0
+  - decorator=4.4.2=py_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.4=pyhd8ed1ab_0
-  - dnaio=0.5.1=py38h4a8c8d9_0
+  - dnaio=0.5.2=py38h4a8c8d9_0
   - docutils=0.17.1=py38h578d9bd_0
-  - dropbox=11.13.1=pyhd8ed1ab_0
+  - dropbox=11.20.0=pyhd8ed1ab_0
   - expat=2.4.1=h9c3ff4c_0
   - fastqc=0.11.9=hdfd78af_1
   - filechunkio=1.8=py_2
@@ -60,41 +64,44 @@ dependencies:
   - fontconfig=2.13.1=hba837de_1005
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - fonttools=4.27.1=py38h497a2fe_0
   - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
   - ftputil=5.0.1=pyhd8ed1ab_0
   - future=0.18.2=py38h578d9bd_3
+  - g-ir-build-tools=1.70.0=py38h69e1f0e_0
+  - g-ir-host-tools=1.70.0=h601b988_0
   - gatk4=4.2.2.0=hdfd78af_1
   - gdk-pixbuf=2.42.6=h04a7f16_0
-  - gettext=0.19.8.1=h0b5b191_1005
+  - gettext=0.19.8.1=h73d1719_1008
   - giflib=5.2.1=h36c2ea0_2
   - gitdb=4.0.7=pyhd8ed1ab_0
-  - gitpython=3.1.18=pyhd8ed1ab_0
-  - glib=2.68.3=h9c3ff4c_0
-  - glib-tools=2.68.3=h9c3ff4c_0
-  - gobject-introspection=1.68.0=py38ha0833b4_1
-  - google-api-core=1.30.0=pyhd8ed1ab_0
-  - google-auth=1.32.1=pyh6c4a22f_0
+  - gitpython=3.1.24=pyhd8ed1ab_0
+  - glib=2.68.4=h9c3ff4c_1
+  - glib-tools=2.68.4=h9c3ff4c_1
+  - gobject-introspection=1.70.0=py38h382169c_0
+  - google-api-core=1.31.2=pyhd8ed1ab_0
+  - google-auth=1.35.0=pyh6c4a22f_0
   - google-cloud-core=1.7.1=pyh6c4a22f_0
   - google-cloud-storage=1.19.0=py_0
   - google-crc32c=1.1.2=py38h8838a9a_0
-  - google-resumable-media=1.3.1=pyh6c4a22f_0
+  - google-resumable-media=2.0.2=pyh6c4a22f_0
   - googleapis-common-protos=1.53.0=py38h578d9bd_0
   - graphite2=1.3.13=h58526e2_1001
-  - graphviz=2.47.3=h85b4f2f_0
+  - graphviz=2.49.0=h85b4f2f_0
   - grpcio=1.38.1=py38hdd6454d_0
   - gsl=2.6=he838d99_2
   - gtk2=2.24.33=h539f30e_1
   - gts=0.7.6=h64030ff_2
-  - harfbuzz=2.8.1=h83ec7ef_0
-  - hdf5=1.10.5=nompi_h5b725eb_1114
+  - harfbuzz=2.9.1=h83ec7ef_0
+  - hdf5=1.10.6=nompi_h6a2412b_1114
   - html5lib=1.1=pyh9f0ad1d_0
   - htslib=1.13=h9093b5e_0
-  - humanfriendly=9.2=py38h578d9bd_0
+  - humanfriendly=9.2=py38h578d9bd_1
   - icu=68.1=h58526e2_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=4.6.1=py38h578d9bd_0
-  - importlib_resources=5.2.0=pyhd8ed1ab_0
+  - idna=3.1=pyhd3deb0d_0
+  - importlib-metadata=4.8.1=py38h578d9bd_0
+  - importlib_resources=5.2.2=pyhd8ed1ab_0
   - isa-l=2.30.0=ha770c72_4
   - jbig=2.1=h7f98852_2003
   - jemalloc=5.2.1=h9c3ff4c_5
@@ -102,66 +109,72 @@ dependencies:
   - jmespath=0.10.0=pyh9f0ad1d_0
   - jpeg=9d=h36c2ea0_0
   - jsonschema=3.2.0=pyhd8ed1ab_3
-  - kiwisolver=1.3.1=py38h1fd1430_1
-  - krb5=1.19.1=hcc1bbae_0
+  - kiwisolver=1.3.2=py38h1fd1430_0
+  - krb5=1.19.2=hcc1bbae_1
   - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_1
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
   - lerc=2.2.1=h9c3ff4c_0
-  - libblas=3.9.0=9_openblas
-  - libcblas=3.9.0=9_openblas
+  - libblas=3.9.0=11_linux64_openblas
+  - libbrotlicommon=1.0.9=h7f98852_5
+  - libbrotlidec=1.0.9=h7f98852_5
+  - libbrotlienc=1.0.9=h7f98852_5
+  - libcblas=3.9.0=11_linux64_openblas
   - libcrc32c=1.1.1=h9c3ff4c_2
-  - libcurl=7.77.0=h2574ce0_0
+  - libcurl=7.79.1=h2574ce0_0
   - libdeflate=1.7=h7f98852_5
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
-  - libffi=3.3=h58526e2_2
+  - libffi=3.4.2=h9c3ff4c_4
   - libgcc=7.2.0=h69d50b8_2
-  - libgcc-ng=9.3.0=h2828fa1_19
-  - libgd=2.3.2=h78a0170_0
-  - libgfortran-ng=9.3.0=hff62375_19
-  - libgfortran5=9.3.0=hff62375_19
-  - libglib=2.68.3=h3e27bee_0
-  - libgomp=9.3.0=h2828fa1_19
+  - libgcc-ng=11.2.0=h1d223b6_8
+  - libgd=2.3.3=h6ad9fb6_0
+  - libgfortran-ng=11.2.0=h69a702a_8
+  - libgfortran5=11.2.0=h5c6108e_8
+  - libgirepository=1.70.0=hb520f89_0
+  - libglib=2.68.4=h174f98d_1
+  - libgomp=11.2.0=h1d223b6_8
   - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=9_openblas
-  - libnghttp2=1.43.0=h812cca2_0
-  - libopenblas=0.3.15=pthreads_h8fe5266_1
+  - liblapack=3.9.0=11_linux64_openblas
+  - libnghttp2=1.43.0=h812cca2_1
+  - libopenblas=0.3.17=pthreads_h8fe5266_1
   - libpng=1.6.37=h21135ba_2
-  - libprotobuf=3.17.2=h780b84a_0
-  - librsvg=2.50.7=hc3c00ef_0
+  - libprotobuf=3.18.0=h780b84a_1
+  - librsvg=2.52.0=hc3c00ef_0
   - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.9.0=ha56f1ee_6
-  - libstdcxx-ng=9.3.0=h6de172a_19
+  - libssh2=1.10.0=ha56f1ee_2
+  - libstdcxx-ng=11.2.0=he4da1e4_8
   - libtiff=4.3.0=hf544144_1
-  - libtool=2.4.6=h58526e2_1007
+  - libtool=2.4.6=h9c3ff4c_1008
   - libuuid=2.32.1=h7f98852_1000
-  - libwebp=1.2.0=h3452ae3_0
-  - libwebp-base=1.2.0=h7f98852_2
+  - libwebp=1.2.1=h3452ae3_0
+  - libwebp-base=1.2.1=h7f98852_0
   - libxcb=1.13=h7f98852_1003
   - libxml2=2.9.12=h72842e0_0
-  - lz4-c=1.9.3=h9c3ff4c_0
+  - lz4-c=1.9.3=h9c3ff4c_1
   - lzstring=1.0.4=py_1001
   - markdown=3.3.4=pyhd8ed1ab_0
   - markupsafe=2.0.1=py38h497a2fe_0
-  - matplotlib-base=3.4.2=py38hcc49a3a_0
+  - matplotlib-base=3.4.3=py38hf4fb855_1
   - multidict=5.1.0=py38h497a2fe_1
-  - multiqc=1.10.1=py_0
-  - ncbi-ngs-sdk=2.11.0=hff44eed_0
+  - multiqc=1.11=pyhdfd78af_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncbi-ngs-sdk=2.11.1=hff44eed_0
   - ncurses=6.2=h58526e2_4
-  - networkx=2.5=py_0
-  - numpy=1.21.0=py38h9894fe3_0
+  - networkx=2.6.3=pyhd8ed1ab_0
+  - numpy=1.21.2=py38he2449b9_0
   - olefile=0.46=pyh9f0ad1d_1
-  - openblas=0.3.15=pthreads_h4748800_1
-  - openjdk=11.0.9.1=h5cc2fde_1
+  - openblas=0.3.17=pthreads_h4748800_1
+  - openjdk=8.0.302=h7f98852_0
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1k=h7f98852_0
-  - orfipy=0.0.3=py38h8c62d01_1
+  - openssl=1.1.1l=h7f98852_0
+  - orfipy=0.0.4=py38h8c62d01_0
   - ossuuid=1.6.2=hf484d3e_1000
   - packaging=21.0=pyhd8ed1ab_0
-  - pandas=1.3.0=py38h1abd341_0
-  - pango=1.48.7=hb8ff022_0
+  - pandas=1.3.3=py38h43a58ef_0
+  - pango=1.48.10=hb8ff022_1
   - paramiko=2.7.2=pyh9f0ad1d_0
-  - patsy=0.5.1=py_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pbzip2=1.1.13=0
   - pcre=8.45=h9c3ff4c_0
   - perl=5.26.2=h36c2ea0_1008
   - perl-app-cpanminus=1.7044=pl526_1
@@ -183,23 +196,25 @@ dependencies:
   - perl-xml-sax=1.02=pl526_0
   - perl-xml-sax-base=1.09=pl526_0
   - perl-xsloader=0.24=pl526_0
-  - picard=2.18.23=0
+  - picard=2.26.2=hdfd78af_0
   - pigz=2.6=h27826a3_0
-  - pillow=8.3.0=py38h8e6f84c_0
-  - pip=21.1.3=pyhd8ed1ab_0
+  - pillow=8.3.2=py38h8e6f84c_0
+  - pip=21.2.4=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
-  - plink=1.90b4=1
+  - pkg-config=0.29.2=h36c2ea0_1008
+  - plink=1.90b6.21=h779adbc_1
   - ply=3.11=py_1
-  - prettytable=2.1.0=pyhd8ed1ab_0
-  - protobuf=3.17.2=py38h709712a_0
+  - prettytable=2.2.1=pyhd8ed1ab_0
+  - protobuf=3.18.0=py38h709712a_0
   - psutil=5.8.0=py38h497a2fe_1
   - pthread-stubs=0.4=h36c2ea0_1001
   - pyahocorasick=1.4.0=py38h1e0a361_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.20=pyh9f0ad1d_2
+  - pydyf=0.1.1=pyhd8ed1ab_0
   - pyfastx=0.8.4=py38h390ddb8_0
-  - pygments=2.9.0=pyhd8ed1ab_0
+  - pygments=2.10.0=pyhd8ed1ab_0
   - pygraphviz=1.7=py38h0d738da_0
   - pynacl=1.4.0=py38h497a2fe_2
   - pyopenssl=20.0.1=pyhd8ed1ab_0
@@ -210,54 +225,56 @@ dependencies:
   - pysam=0.16.0.1=py38hf7546f9_3
   - pysftp=0.2.9=py_1
   - pysocks=1.7.1=py38h578d9bd_3
-  - python=3.8.10=h49503c6_1_cpython
-  - python-dateutil=2.8.1=py_0
+  - python=3.8.12=hb7a2778_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-irodsclient=1.0.0=pyhd8ed1ab_0
-  - python-isal=0.10.0=py38h497a2fe_0
+  - python-isal=0.11.1=py38h497a2fe_0
   - python_abi=3.8=2_cp38
   - pytz=2021.1=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py38h497a2fe_0
+  - pyyaml=5.4.1=py38h497a2fe_1
+  - r-base=3.2.2=0
   - ratelimiter=1.2.0=py_1002
   - readline=8.1=h46c0cb4_0
-  - requests=2.25.1=pyhd3deb0d_0
-  - rich=10.5.0=py38h578d9bd_0
+  - requests=2.26.0=pyhd8ed1ab_0
+  - rich=10.11.0=py38h578d9bd_0
   - rsa=4.7.2=pyh44b312d_0
-  - s3transfer=0.4.2=pyhd8ed1ab_0
-  - salmon=1.4.0=h84f40af_1
+  - s3transfer=0.5.0=pyhd8ed1ab_0
+  - salmon=1.5.2=h84f40af_0
   - samtools=1.13=h8c37831_0
-  - scipy=1.7.0=py38h7b17777_0
-  - seaborn=0.11.1=hd8ed1ab_1
-  - seaborn-base=0.11.1=pyhd8ed1ab_1
-  - setuptools=49.6.0=py38h578d9bd_3
-  - simplejson=3.17.2=py38h497a2fe_2
+  - scipy=1.7.1=py38h56a6a73_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - setuptools=58.0.4=py38h578d9bd_2
+  - simplejson=3.17.5=py38h497a2fe_0
   - six=1.16.0=pyh6c4a22f_0
   - smmap=3.0.5=pyh44b312d_0
   - snakemake=5.4.0=0
   - snakemake-minimal=5.4.0=py_0
   - spectra=0.0.11=py_1
-  - sqlite=3.36.0=h9cd32fc_0
-  - sra-tools=2.10.9=pl526haddd2b5_0
-  - star=2.7.7a=0
-  - statsmodels=0.12.2=py38h5c078b8_0
+  - sqlite=3.36.0=h9cd32fc_2
+  - sra-tools=2.11.0=pl5262h314213e_0
+  - star=2.7.9a=h9ee0642_0
+  - statsmodels=0.12.2=py38h6c62de6_0
   - stone=3.2.1=pyhd8ed1ab_0
-  - stringtie=2.1.4=h7e0af3c_0
-  - tabix=0.2.6=ha92aebf_0
+  - stringtie=2.1.7=h978d192_0
+  - tabix=1.11=hdfd78af_0
   - tbb=2020.2=h4bd325d_4
   - tinycss2=1.1.0=pyhd8ed1ab_0
-  - tk=8.6.10=h21135ba_1
+  - tk=8.6.11=h27826a3_1
   - tornado=6.1=py38h497a2fe_1
-  - trim-galore=0.6.6=hdfd78af_1
-  - typing-extensions=3.10.0.0=hd8ed1ab_0
-  - typing_extensions=3.10.0.0=pyha770c72_0
-  - urllib3=1.26.6=pyhd8ed1ab_0
+  - trim-galore=0.6.7=hdfd78af_0
+  - typing-extensions=3.10.0.2=hd8ed1ab_0
+  - typing_extensions=3.10.0.2=pyha770c72_0
+  - unicodedata2=13.0.0.post2=py38h1e0a361_1
+  - urllib3=1.26.7=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
-  - weasyprint=52.5=pyhd8ed1ab_1
+  - weasyprint=53.3=pyhd8ed1ab_0
   - webencodings=0.5.1=py_1
-  - wheel=0.36.2=pyhd3deb0d_0
+  - wheel=0.37.0=pyhd8ed1ab_1
   - wrapt=1.12.1=py38h497a2fe_3
   - xmlrunner=1.7.7=py_0
-  - xopen=1.1.0=py38h578d9bd_3
+  - xopen=1.2.0=py38h578d9bd_0
   - xorg-fixesproto=5.0=h7f98852_1002
   - xorg-inputproto=2.3.2=h7f98852_1002
   - xorg-kbproto=1.0.7=h7f98852_1002
