--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
 OutputDir: 'output'
-THREADS: 30
+STAR_THREADS: 30
 #Specify file type: fastq,fq, bam, VCF, or SRA.
 FileType: 'SRA'
+
+
+##
 #Specify individual chromosome: [5]
 #Specify individual chromosomes: [5,6]
 #Specify all chromosomes: 'All' 
