--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,11 @@
 OutputDir: 'output'
 STAR_THREADS: 30
-#Specify file type: fastq,fq, bam, VCF, or SRA.
+##Specify file type: fastq,fq or SRA.
 FileType: 'SRA'
-
-
-##
+##chromosomes to be genotyped
 #Specify individual chromosome: [5]
 #Specify individual chromosomes: [5,6]
-#Specify all chromosomes: 'All' 
+#Specify all chromosomes 1-22: 'All' 
 Interval: 'All'
-#Specify number of PCs for PCA step
+##Specify number of PCs for machine learning step
 PCs: 20
