--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ FileType: 'SRA'
 #Specify individual chromosomes: ['5','6']
 #Specify all chromosomes 1-22: 'All' 
 #Specify X,Y,M chromosomes in AllVar or Somatatic mode: ['X','Y','M']
-#Specify all chromosomes including X,Y,M: 'AllMYX'
+#Specify all chromosomes 1-22 and X,Y,M in AllVar or Somatatic mode: 'AllMYX'
 Interval: 'All'
 ##Specify number of PCs for machine learning step
 PCs: 20
